// Package model contains data structures and repository interfaces for the application.
package model

// AnomalyLog represents a single moderation record.
type AnomalyLog struct {
	ID        int64  `json:"id"`
	LiveName  string `json:"live_name"`
	Day       string `json:"day"`
	Timestamp string `json:"timestamp"`
	UniqueID  string `json:"uniqueId"`
	Comment   string `json:"comment"`
	IsAnomaly bool   `json:"is_anomaly"`
	Category  string `json:"category"`
}

// UserMessage represents a user message from a live stream.
type UserMessage struct {
	ID        int64  `json:"id"`
	LiveName  string `json:"liveName,omitempty"`
	UniqueID  string `json:"uniqueId"`
	Username  string `json:"username"`
	Message   string `json:"message"`
	Timestamp string `json:"timestamp"`
}

// Gift represents a gift received during a live stream.
type Gift struct {
	ID          int64  `json:"id"`
	LiveName    string `json:"live_name"`
	UniqueID    string `json:"uniqueId"`
	Nickname    string `json:"nickname"`
	GiftName    string `json:"giftName"`
	RepeatCount int    `json:"repeatCount"`
	GiftType    int    `json:"giftType"`
	Timestamp   string `json:"timestamp"`
}

// Target gift response types.
const (
	TargetGiftResponseManual    = "manual"
	TargetGiftResponseAutomatic = "automatic"
)

// TargetGiftHistory tracks when a target gift was received and answered.
type TargetGiftHistory struct {
	ID           int64   `json:"id"`
	LiveName     string  `json:"liveName"`
	UniqueID     string  `json:"uniqueId"`
	Nickname     string  `json:"nickname"`
	GiftName     string  `json:"giftName"`
	ReceivedAt   string  `json:"receivedAt"`
	AnsweredAt   *string `json:"answeredAt,omitempty"`
	ResponseType *string `json:"responseType,omitempty"`
}

// Gift goal status values.
const (
	GoalStatusActive    = "active"
	GoalStatusCompleted = "completed"
	GoalStatusCancelled = "cancelled"
)

// GoalMilestone is a progress point on a gift goal: when the live passes
// AtUnits units the Reward text is granted.
type GoalMilestone struct {
	AtUnits    int     `json:"atUnits"`
	Reward     string  `json:"reward"`
	Unlocked   bool    `json:"unlocked"`
	UnlockedAt *string `json:"unlockedAt,omitempty"`
}

// GiftGoal is a live gift goal: a target in gift units (SUM repeat_count)
// with text reward milestones. When GiftName is empty the goal counts all
// gifts of the live; otherwise only units of the given gift count.
type GiftGoal struct {
	ID          int64           `json:"id"`
	LiveName    string          `json:"liveName"`
	Title       string          `json:"title"`
	GiftName    string          `json:"giftName,omitempty"`
	TargetUnits int             `json:"targetUnits"`
	Status      string          `json:"status"`
	Milestones  []GoalMilestone `json:"milestones"`
	CompletedAt *string         `json:"completedAt,omitempty"`
	CreatedAt   string          `json:"createdAt"`
}

// PinnedComment is a comment pinned during a live stream.
type PinnedComment struct {
	ID         int64  `json:"id"`
	LiveName   string `json:"liveName"`
	UniqueID   string `json:"uniqueId"`
	Nickname   string `json:"nickname"`
	Comment    string `json:"comment"`
	PinID      string `json:"pinId,omitempty"`
	IsFollower *bool  `json:"isFollower,omitempty"`
	Timestamp  string `json:"timestamp"`
}

// Risk level constants used across ranking and profiles.
const (
	RiskLevelNone     = "none"
	RiskLevelLow      = "low"
	RiskLevelMedium   = "medium"
	RiskLevelHigh     = "high"
	RiskLevelCritical = "critical"
)

// TikTok-style visual tiers for the in-room gifter ranking (mirrors the
// LIVE Ranking gifts/badges TikTok shows on stream: crown for #1, headband
// for #2, medal for #3).
const (
	TierCrown    = "crown"    // 1st place
	TierHeadband = "headband" // 2nd place
	TierMedal    = "medal"    // 3rd place
)

// Ranking modes.
const (
	ModeEngagement = "engagement" // default weighted engagement score
	ModeTikTok     = "tiktok"     // TikTok in-room ranking: pure gift (diamond) value
)

// UserRank is a single participant's engagement ranking for a live.
type UserRank struct {
	UniqueID      string  `json:"uniqueId"`
	Nickname      string  `json:"nickname"`
	Score         float64 `json:"score"`
	GiftScore     float64 `json:"giftScore"`
	// Diamonds is the total coin (diamond) value of the gifts sent by the
	// user (sum of gift price x repeat count), the metric TikTok's in-room
	// live ranking is based on.
	Diamonds int `json:"diamonds"`
	// Tier holds the TikTok visual tier for the gifter ranking top 3
	// (crown / headband / medal); empty outside that podium.
	Tier string `json:"tier,omitempty"`
	MessageCount  int     `json:"messageCount"`
	QuestionCount int     `json:"questionCount"`
	GiftCount     int     `json:"giftCount"`
	ShareCount    int     `json:"shareCount"`
	LikeCount     int     `json:"likeCount"`
	AnomalyCount  int     `json:"anomalyCount"`
	RiskLevel     string  `json:"riskLevel"`
	FirstSeen     string  `json:"firstSeen"`
	LastSeen      string  `json:"lastSeen"`
}

// LiveRanking is the full engagement ranking for a single live.
type LiveRanking struct {
	LiveName   string     `json:"liveName"`
	UpdatedAt  string     `json:"updatedAt"`
	TotalUsers int        `json:"totalUsers"`
	UserRanks  []UserRank `json:"userRanks"`
	// Mode is the ranking criterion in use ("engagement" or "tiktok").
	Mode string `json:"mode,omitempty"`
	// TotalGiftValue is the room-level sum of gift coin values (💎).
	TotalGiftValue int `json:"totalGiftValue,omitempty"`
	// TotalLikes is the room-level cumulative like counter reported by the
	// TikTok stream (authoritative overall like count for the live).
	TotalLikes int64 `json:"totalLikes,omitempty"`
}

// LiveReport is the AI-generated post-live summary.
type LiveReport struct {
	LiveName          string           `json:"liveName"`
	StartedAt         string           `json:"startedAt"`
	EndedAt           string           `json:"endedAt"`
	DurationMinutes   int              `json:"durationMinutes"`
	MessageCount      int              `json:"messageCount"`
	ParticipantCount  int              `json:"participantCount"`
	GiftCount         int              `json:"giftCount"`
	GiftTotal         int              `json:"giftTotal"`
	// GiftValue is the total coin (💎) value of the gifts received in the live.
	GiftValue         int              `json:"giftValue,omitempty"`
	TopSupporters     []UserRank       `json:"topSupporters"`
	FrequentQuestions []string         `json:"frequentQuestions"`
	ModerationIssues  []AnomalySummary `json:"moderationIssues"`
	Summary           string           `json:"summary"`
}

// AnomalySummary groups anomaly logs by category for the report.
type AnomalySummary struct {
	Category string `json:"category"`
	Count    int    `json:"count"`
}

// UserProfile aggregates a participant's full history across lives.
type UserProfile struct {
	UniqueID      string        `json:"uniqueId"`
	Nickname      string        `json:"nickname"`
	Messages      []UserMessage `json:"messages"`
	Gifts         []Gift        `json:"gifts"`
	Alerts        []AnomalyLog  `json:"alerts"`
	RiskLevel     string        `json:"riskLevel"`
	TotalMessages int           `json:"totalMessages"`
	TotalGifts    int           `json:"totalGifts"`
	// TotalGiftUnits is the sum of repeat_count over the user's gifts
	// (same metric used by gift goals and reports).
	TotalGiftUnits int `json:"totalGiftUnits"`
	// TotalGiftValue is the sum of the coin (💎) value of the user's gifts
	// (gift price x repeat_count, researched TikTok live gift table).
	TotalGiftValue int `json:"totalGiftValue,omitempty"`
	// TotalLikes is the sum of like_count over the user's like events.
	TotalLikes int `json:"totalLikes"`
	// TotalShares is the number of share events made by the user.
	TotalShares int               `json:"totalShares"`
	LastLives   []UserLiveSummary `json:"lastLives"`
}

// UserLiveSummary describes one live a participant appeared in.
type UserLiveSummary struct {
	LiveName  string `json:"liveName"`
	Messages  int    `json:"messages"`
	Gifts     int    `json:"gifts"`
	FirstSeen string `json:"firstSeen"`
	LastSeen  string `json:"lastSeen"`
}

// Live is a derived view of one live on one day: activity interval and event count.
// There is no dedicated lives/schedules table; it is aggregated from the tables
// that carry live_name (user_messages, gifts, shares, anomaly_logs, pinned_comments,
// target_gift_history).
type Live struct {
	Name      string `json:"name"`
	Day       string `json:"day"`
	StartedAt string `json:"startedAt"`
	EndedAt   string `json:"endedAt"`
	Events    int    `json:"events"`
}
